2014-01-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
        
        * Bug fix Version 0.8.1 released
        ================================
        
        Added missing hyphens in pfiles synchronisation section (#1091)
        Add configuration test script (#1091)
        GModelSky, GCTAModelBackground and GCTAModelRadialAcceptance write
            id attribute into XML file (#1092)
        Add GChatter typedef to Python interface
        GAMMALIB_CALDB takes precedence over CALDB environment var (#1094)

2014-01-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.8.0 released
        ========================

        Major review of public interfaces of all classes
        Reorganize sky models
        Introduce GContainer interface class
        Add Virtual Observatory support
        Introduce GUrl classes for transparent URL handling
        Make use of GUrl class in XML I/O
        Optimize computations
        Introduce gammalib namespace for constants and functions
        GModelSpatialDiffuseCube reads ENERGIES extension
        Add sky region handling
        Add on/off analysis support for CTA
        Add xspec interface support
        Rework registry classes to remove memory leaks on termination
        Add support for variable-length FITS columns
        Generalise GSkyPixel to 1D and 2D pixelisations
        Added King profile PSF for CTA
        Reorganise GOptimizerPars class and add GOptimizerPar class
        Put likelihood computation in GObservation class
        Add broken power law spectral model
        Add Gaussian spectral model
        Update parameter files if necessary
        Implement exact sky map pixel solid angle computation
        Rename the following classes:
        - GWcs => GSkyProjection
        - GWcslib => GWcs
        - GWcsHPX => GHealpix

2012-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.7.0 released
        ========================
