@@ -61,9 +61,10 @@ BUILT_SOURCES = gammalib/app_wrap.cpp  gammalib/app.py \
                 gammalib/opt_wrap.cpp gammalib/opt.py \
                 gammalib/sky_wrap.cpp gammalib/sky.py \
                 gammalib/support_wrap.cpp gammalib/support.py \
+                gammalib/test_wrap.cpp gammalib/test.py \
                 gammalib/xml_wrap.cpp gammalib/xml.py \
                 gammalib/xspec_wrap.cpp gammalib/xspec.py \
-                gammalib/test_wrap.cpp gammalib/test.py \
+                gammalib/vo_wrap.cpp gammalib/vo.py \
                 $(INST_SWIG_TARGETS)
 
 # Dependencies. Obtain the list of dependencies by executing ls.
